native/llama_dart_bridge/include/llama_dart.h

typedef enum llama_dart_result {
  LLAMA_DART_SUCCESS = 0,
  LLAMA_DART_ERROR_INVALID_ARGUMENT = 1,
  LLAMA_DART_ERROR_UNSUPPORTED = 2,
  LLAMA_DART_ERROR_INTERNAL = 3,
  LLAMA_DART_ERROR_MODEL_LOAD = 4,
  LLAMA_DART_ERROR_BUFFER_TOO_SMALL = 5,
  LLAMA_DART_ERROR_CONTEXT_CREATE = 6,
  LLAMA_DART_ERROR_GENERATION = 7,
  LLAMA_DART_ERROR_EMBEDDING = 8,
  LLAMA_DART_ERROR_CANCELLED = 9,
  LLAMA_DART_ERROR_RERANKING = 10,
  LLAMA_DART_ERROR_LORA = 11,
} llama_dart_result;
typedef struct llama_dart_model llama_dart_model;
typedef struct llama_dart_context llama_dart_context;
typedef struct llama_dart_context_config {
  uint32_t struct_size;
  uint32_t context_size;
  uint32_t batch_size;
  uint32_t ubatch_size;
  int32_t threads;
  int32_t batch_threads;
  uint8_t embeddings;
  int32_t pooling_type;
  int32_t attention_type;
  uint32_t speculative_ngram_n;
  uint32_t speculative_ngram_m;
  const uint8_t *mmproj_path_data;
  size_t mmproj_path_size;
  uint8_t mmproj_use_gpu;
  uint32_t speculative_type;
  const uint8_t *speculative_model_path_data;
  size_t speculative_model_path_size;
  uint32_t speculative_draft_max;
  uint32_t kv_cache_key_type;
  uint32_t kv_cache_value_type;
  uint32_t flash_attention;
  uint8_t kv_cache_offload;
  uint8_t swa_full;
  uint8_t kv_unified;
  uint32_t speculative_ngram_min_draft;
} llama_dart_context_config;
typedef struct llama_dart_context_info {
  uint32_t struct_size;
  uint32_t context_size;
  uint32_t sequence_context_size;
  uint32_t batch_size;
  uint32_t ubatch_size;
  uint32_t max_sequences;
  uint8_t supports_vision;
  uint8_t supports_audio;
  uint32_t gpu_backend;
  uint8_t supports_context_shift;
  uint32_t used_tokens;
  uint32_t kv_cache_key_type;
  uint32_t kv_cache_value_type;
  uint32_t flash_attention;
  uint8_t kv_cache_offload;
  uint8_t swa_full;
  uint8_t kv_unified;
} llama_dart_context_info;
typedef struct llama_dart_chat_template_capabilities {
  uint32_t struct_size;
  uint8_t supports_tools;
  uint8_t supports_tool_calls;
  uint8_t supports_parallel_tool_calls;
} llama_dart_chat_template_capabilities;
typedef struct llama_dart_buffer {
  uint8_t *data;
  size_t size;
} llama_dart_buffer;
typedef struct llama_dart_chat_message {
  uint32_t struct_size;
  const uint8_t *role_data;
  size_t role_size;
  const uint8_t *content_data;
  size_t content_size;
} llama_dart_chat_message;
LLAMA_DART_EXPORT llama_dart_result llama_dart_model_tokenize(
    const llama_dart_model *model, const uint8_t *text_data, size_t text_size,
    int32_t *tokens, size_t tokens_capacity, size_t *out_token_count,
    uint8_t add_special, uint8_t parse_special);
LLAMA_DART_EXPORT llama_dart_result llama_dart_model_detokenize(
    const llama_dart_model *model, const int32_t *tokens, size_t token_count,
    uint8_t *text_data, size_t text_capacity, size_t *out_text_size,
    uint8_t remove_special, uint8_t unparse_special);
LLAMA_DART_EXPORT llama_dart_result llama_dart_model_apply_chat_template(
    const llama_dart_model *model, const llama_dart_chat_message *messages,
    size_t message_count, uint8_t add_assistant_prompt,
    llama_dart_buffer *out_prompt);
LLAMA_DART_EXPORT llama_dart_result
llama_dart_model_get_chat_template_capabilities(
    const llama_dart_model *model,
    llama_dart_chat_template_capabilities *out_capabilities);
/*
 * Renders an OpenAI-shaped JSON chat request through the pinned upstream
 * Jinja template machinery. The result is an opaque JSON plan consumed by
 * completion and llama_dart_chat_parse_output.
 */
LLAMA_DART_EXPORT llama_dart_result llama_dart_model_create_chat_plan(
    const llama_dart_model *model, const uint8_t *request_data,
    size_t request_size, llama_dart_buffer *out_plan);
LLAMA_DART_EXPORT llama_dart_result llama_dart_chat_parse_output(
    const uint8_t *plan_data, size_t plan_size, const uint8_t *output_data,
    size_t output_size, llama_dart_buffer *out_message_json);
LLAMA_DART_EXPORT llama_dart_result llama_dart_json_schema_to_grammar(
    const uint8_t *schema_data, size_t schema_size,
    llama_dart_buffer *out_grammar);
/* Creates a context owned by the caller until llama_dart_context_free. */
LLAMA_DART_EXPORT llama_dart_result llama_dart_context_create(
    llama_dart_model *model, const llama_dart_context_config *config,
    llama_dart_context **out_context);
/* Releases a context returned by llama_dart_context_create. */
LLAMA_DART_EXPORT void llama_dart_context_free(llama_dart_context *context);
LLAMA_DART_EXPORT llama_dart_result
llama_dart_context_reset(llama_dart_context *context);
/* Warms an empty context and restores it to the empty state. */
LLAMA_DART_EXPORT llama_dart_result
llama_dart_context_warm_up(llama_dart_context *context);
LLAMA_DART_EXPORT llama_dart_result
llama_dart_context_cancel(llama_dart_context *context);
LLAMA_DART_EXPORT llama_dart_result llama_dart_context_get_info(
    const llama_dart_context *context, llama_dart_context_info *out_info);
LLAMA_DART_EXPORT llama_dart_result llama_dart_context_state_get(
    llama_dart_context *context, llama_dart_buffer *out_state);