lib/src/ffi/generated_bindings.dart


  late final _llama_dart_model_tokenizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Int32>,
            ffi.Size,
            ffi.Pointer<ffi.Size>,
            ffi.Uint8,
            ffi.Uint8,
          )
        >
      >('llama_dart_model_tokenize');
  late final _llama_dart_model_tokenize = _llama_dart_model_tokenizePtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_model>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int32>,
          int,
          ffi.Pointer<ffi.Size>,
          int,
          int,
        )
      >();

  llama_dart_result llama_dart_model_detokenize(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<ffi.Int32> tokens,
    int token_count,
    ffi.Pointer<ffi.Uint8> text_data,
    int text_capacity,
    ffi.Pointer<ffi.Size> out_text_size,
    int remove_special,
    int unparse_special,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_detokenize(
        model,
        tokens,
        token_count,
        text_data,
        text_capacity,
        out_text_size,
        remove_special,
        unparse_special,
      ),
    );
  }

  late final _llama_dart_model_detokenizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<ffi.Int32>,
            ffi.Size,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Size>,
            ffi.Uint8,
            ffi.Uint8,
          )
        >
      >('llama_dart_model_detokenize');
  late final _llama_dart_model_detokenize = _llama_dart_model_detokenizePtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_model>,
          ffi.Pointer<ffi.Int32>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Size>,
          int,
          int,
        )
      >();

  llama_dart_result llama_dart_model_apply_chat_template(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<llama_dart_chat_message> messages,
    int message_count,
    int add_assistant_prompt,
    ffi.Pointer<llama_dart_buffer> out_prompt,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_apply_chat_template(
        model,
        messages,
        message_count,
        add_assistant_prompt,
        out_prompt,
      ),
    );
  }

  late final _llama_dart_model_apply_chat_templatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<llama_dart_chat_message>,
            ffi.Size,
            ffi.Uint8,
            ffi.Pointer<llama_dart_buffer>,
          )
        >
      >('llama_dart_model_apply_chat_template');
  late final _llama_dart_model_apply_chat_template =
      _llama_dart_model_apply_chat_templatePtr
          .asFunction<
            int Function(
              ffi.Pointer<llama_dart_model>,
              ffi.Pointer<llama_dart_chat_message>,
              int,
              int,
              ffi.Pointer<llama_dart_buffer>,
            )
          >();

  llama_dart_result llama_dart_model_get_chat_template_capabilities(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<llama_dart_chat_template_capabilities> out_capabilities,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_get_chat_template_capabilities(model, out_capabilities),
    );
  }

  late final _llama_dart_model_get_chat_template_capabilitiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<llama_dart_chat_template_capabilities>,
          )
        >
      >('llama_dart_model_get_chat_template_capabilities');
  late final _llama_dart_model_get_chat_template_capabilities =
      _llama_dart_model_get_chat_template_capabilitiesPtr
          .asFunction<
            int Function(
              ffi.Pointer<llama_dart_model>,
              ffi.Pointer<llama_dart_chat_template_capabilities>,
            )
          >();

  llama_dart_result llama_dart_model_create_chat_plan(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<ffi.Uint8> request_data,
    int request_size,
    ffi.Pointer<llama_dart_buffer> out_plan,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_create_chat_plan(
        model,
        request_data,
        request_size,
        out_plan,
      ),
    );
  }

  late final _llama_dart_model_create_chat_planPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<llama_dart_buffer>,
          )
        >
      >('llama_dart_model_create_chat_plan');
  late final _llama_dart_model_create_chat_plan =
      _llama_dart_model_create_chat_planPtr
          .asFunction<
            int Function(
              ffi.Pointer<llama_dart_model>,
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<llama_dart_buffer>,
            )
          >();

  llama_dart_result llama_dart_chat_parse_output(
    ffi.Pointer<ffi.Uint8> plan_data,
    int plan_size,
    ffi.Pointer<ffi.Uint8> output_data,
    int output_size,
    ffi.Pointer<llama_dart_buffer> out_message_json,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_chat_parse_output(
        plan_data,
        plan_size,
        output_data,
        output_size,
        out_message_json,
      ),
    );
  }

  late final _llama_dart_chat_parse_outputPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<llama_dart_buffer>,
          )
        >
      >('llama_dart_chat_parse_output');
  late final _llama_dart_chat_parse_output = _llama_dart_chat_parse_outputPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<llama_dart_buffer>,
        )
      >();

  llama_dart_result llama_dart_json_schema_to_grammar(
    ffi.Pointer<ffi.Uint8> schema_data,
    int schema_size,
    ffi.Pointer<llama_dart_buffer> out_grammar,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_json_schema_to_grammar(schema_data, schema_size, out_grammar),
    );
  }

  late final _llama_dart_json_schema_to_grammarPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<llama_dart_buffer>,
          )
        >
      >('llama_dart_json_schema_to_grammar');
  late final _llama_dart_json_schema_to_grammar =
      _llama_dart_json_schema_to_grammarPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<llama_dart_buffer>,
            )
          >();

  llama_dart_result llama_dart_context_create(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<llama_dart_context_config> config,
    ffi.Pointer<ffi.Pointer<llama_dart_context>> out_context,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_context_create(model, config, out_context),
    );
  }

  late final _llama_dart_context_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<llama_dart_context_config>,
            ffi.Pointer<ffi.Pointer<llama_dart_context>>,
          )
        >
      >('llama_dart_context_create');
  late final _llama_dart_context_create = _llama_dart_context_createPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_model>,
          ffi.Pointer<llama_dart_context_config>,
          ffi.Pointer<ffi.Pointer<llama_dart_context>>,
        )
      >();

  void llama_dart_context_free(ffi.Pointer<llama_dart_context> context) {
    return _llama_dart_context_free(context);
  }

  late final _llama_dart_context_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llama_dart_context>)>
      >('llama_dart_context_free');
  late final _llama_dart_context_free = _llama_dart_context_freePtr
      .asFunction<void Function(ffi.Pointer<llama_dart_context>)>();

  llama_dart_result llama_dart_context_reset(
    ffi.Pointer<llama_dart_context> context,
  ) {
    return llama_dart_result.fromValue(_llama_dart_context_reset(context));
  }

  late final _llama_dart_context_resetPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<llama_dart_context>)
        >
      >('llama_dart_context_reset');
  late final _llama_dart_context_reset = _llama_dart_context_resetPtr
      .asFunction<int Function(ffi.Pointer<llama_dart_context>)>();

  llama_dart_result llama_dart_context_warm_up(
    ffi.Pointer<llama_dart_context> context,
  ) {
    return llama_dart_result.fromValue(_llama_dart_context_warm_up(context));
  }

  late final _llama_dart_context_warm_upPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<llama_dart_context>)
        >
      >('llama_dart_context_warm_up');
  late final _llama_dart_context_warm_up = _llama_dart_context_warm_upPtr
      .asFunction<int Function(ffi.Pointer<llama_dart_context>)>();

  llama_dart_result llama_dart_context_cancel(
    ffi.Pointer<llama_dart_context> context,
  ) {
    return llama_dart_result.fromValue(_llama_dart_context_cancel(context));
  }

  late final _llama_dart_context_cancelPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<llama_dart_context>)
        >
      >('llama_dart_context_cancel');
  late final _llama_dart_context_cancel = _llama_dart_context_cancelPtr
      .asFunction<int Function(ffi.Pointer<llama_dart_context>)>();

  llama_dart_result llama_dart_context_get_info(
    ffi.Pointer<llama_dart_context> context,
    ffi.Pointer<llama_dart_context_info> out_info,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_context_get_info(context, out_info),
    );
  }

  late final _llama_dart_context_get_infoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_context>,
            ffi.Pointer<llama_dart_context_info>,
          )
        >
      >('llama_dart_context_get_info');
  late final _llama_dart_context_get_info = _llama_dart_context_get_infoPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_context>,
          ffi.Pointer<llama_dart_context_info>,
        )
      >();

  llama_dart_result llama_dart_context_state_get(
    ffi.Pointer<llama_dart_context> context,
    ffi.Pointer<llama_dart_buffer> out_state,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_context_state_get(context, out_state),
    );
  }

  late final _llama_dart_context_state_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_context>,
            ffi.Pointer<llama_dart_buffer>,
          )
        >
      >('llama_dart_context_state_get');
  late final _llama_dart_context_state_get = _llama_dart_context_state_getPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_context>,
          ffi.Pointer<llama_dart_buffer>,
        )
      >();
